--- a/VE_CE/WinServer.vcproj
+++ b/VE_CE/WinServer.vcproj
@@ -80,7 +80,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -204,10 +204,10 @@
 				RelativePath="..\VE_Conductor\Framework\interface.cpp">
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\moduleC.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleC.cpp">
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\moduleS.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleS.cpp">
 			</File>
 			<File
 				RelativePath="Network_Exec.cpp">
@@ -269,10 +269,10 @@
 				RelativePath="..\VE_Conductor\Framework\interface.h">
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\moduleC.h">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleC.h">
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\moduleS.h">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleS.h">
 			</File>
 			<File
 				RelativePath="Network_Exec.h">
