--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -83,7 +83,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)/VE_Conductor/Framework&quot;;./;&quot;$(VE_SUITE_HOME)/VE_Conductor/VE_UI/&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)/VE_Conductor/Framework&quot;;./;&quot;$(VE_SUITE_HOME)/VE_Conductor/VE_UI/&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;_TAO"
 				IgnoreStandardIncludePath="FALSE"
 				BasicRuntimeChecks="3"
@@ -260,10 +260,10 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\..\VESOpen\skel\moduleC.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleC.cpp">
 			</File>
 			<File
-				RelativePath="..\..\VESOpen\skel\moduleS.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\moduleS.cpp">
 			</File>
 			<File
 				RelativePath="Network.cpp">
@@ -589,10 +589,10 @@
 				RelativePath=".\UIDialog.cpp">
 			</File>
 			<File
-				RelativePath="..\..\VESOpen\skel\VjObsC.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\VjObsC.cpp">
 			</File>
 			<File
-				RelativePath="..\..\VESOpen\skel\VjObsS.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\VjObsS.cpp">
 			</File>
 		</Filter>
 		<Filter
