--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -172,7 +172,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_TAO;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -228,7 +228,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(IDL_HOME)\skel&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\futuregen\VE_UI&quot;"
+				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\futuregen\VE_UI&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -282,7 +282,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(IDL_HOME)\skel&quot;"
+				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -389,7 +389,7 @@ echo Done.
 				RelativePath=".\Ve_ui\UI_VisTab.cpp">
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\VjObs.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\VjObs.cpp">
 				<FileConfiguration
 					Name="Debug_TAO|Win32"
 					ExcludedFromBuild="TRUE">
@@ -398,7 +398,7 @@ echo Done.
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\VESOpen\skel\VjObsC.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VEOpen\skel\VjObsC.cpp">
 				<FileConfiguration
 					Name="Debug|Win32"
 					ExcludedFromBuild="TRUE">
