--- a/VEOpen/VESOpen/VESOpen.vcproj
+++ b/VEOpen/VESOpen/VESOpen.vcproj
@@ -125,8 +125,8 @@
 				Name="VCCustomBuildTool"
 				Description="IDL Compiler"
 				CommandLine="echo C++ stubs. . .
-$(ACE_ROOT)/bin/tao_idl.exe -o $(VE_SUITE_HOME)/VEOpen/skel -GI -I./idl   $(VE_SUITE_HOME)/VEOpen/idl/module.idl
-$(ACE_ROOT)/bin/tao_idl.exe -o $(VE_SUITE_HOME)/VEOpen/skel -GI -I./idl   $(VE_SUITE_HOME)/VEOpen/idl/VjObs.idl
+tao_idl.exe -o $(VE_SUITE_HOME)/VEOpen/skel -GI -I./idl   $(VE_SUITE_HOME)/VEOpen/idl/module.idl
+tao_idl.exe -o $(VE_SUITE_HOME)/VEOpen/skel -GI -I./idl   $(VE_SUITE_HOME)/VEOpen/idl/VjObs.idl
 echo Done.
 "
 				AdditionalDependencies="module.idl;VjObs.idl"
