--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -172,7 +172,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_TAO;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -390,6 +390,9 @@ echo Done.
 		<Filter
 			Name="src"
 			Filter="">
+			<File
+				RelativePath="..\VE_Builder\Utilities\gui\spinctld.cpp">
+			</File>
 			<File
 				RelativePath=".\Ve_ui\UI_App.cpp">
 			</File>
