removed some new code. need to make sure that we actually need this code. it seems that the functionality already exists to get the data that these functions provide.

--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -818,7 +818,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\Ve_ui\UI_ModelData.cxx">
+				RelativePath="..\Ve_ui\UI_ModelData.cpp">
 			</File>
 			<File
 				RelativePath="..\Ve_ui\UI_ModSelPanel.cpp">
