--- a/VE_WebService/Makefile
+++ b/VE_WebService/Makefile
@@ -17,6 +17,12 @@ SRCS=\
    moduleS.cpp \
    cfdWebServicesMain.cxx \
    cfdWebServices.cxx \
+   interface.cpp \
+   #cfdGroup.cxx \
+   #package.cpp \
+   Network.cpp \
+   
+   
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
@@ -47,7 +53,7 @@ include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 include $(VE_SUITE_HOME)/VE_Installer/dzr.ace_tao.mk
 include $(VE_SUITE_HOME)/VE_Installer/dzr.xerces.mk
 
-vpath %.cpp $(VE_SUITE_HOME)/VE_Conductor/Framework $(IDL_HOME)/skel 
+vpath %.cpp $(VE_SUITE_HOME)/VE_Conductor/Framework $(IDL_HOME)/skel $(VE_SUITE_HOME)/VE_SceneGraph
 
 EXTRA_CXXFLAGS += -I$(VE_SUITE_HOME)/VE_Conductor/Framework -I$(IDL_HOME)/skel  
 EXTRA_CXXFLAGS += -I$(VJ_BASE_DIR)/include -I$(VE_SUITE_HOME)/VE_CE -I$(VE_SUITE_HOME)/VE_Xplorer -I$(VE_SUITE_HOME)/VE_SceneGraph 
